Añadida botón para mostrar sidebar cuando no hay espacio

--- a/servicios/templates/index.html
+++ b/servicios/templates/index.html
@@ -15,16 +15,15 @@
 <body>
     <!-- Encabezado y menu -->
     <header>
-      <div class="header-icon">
+      <div class="header-icon" onclick="mostrar_sidebar()">
         <svg width="38" height="32" viewBox="0 0 38 32" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M27 2L2 2" stroke="white" stroke-width="3" stroke-linecap="round"/>
           <path d="M30 13H2" stroke="white" stroke-width="3" stroke-linecap="round"/>
           <path d="M18 23L2 23" stroke="white" stroke-width="3" stroke-linecap="round"/>
           </svg>
-            
       </div>
     </header>
-    <nav class="sidebar">
+    <nav class="sidebar" id="sidebar">
       <div class="logo font-fuerte font-blanco">
         Logo <span class="font-suave font-blanco">Admin</span>
       </div>
