--- a/servicios/templates/empleados/listado.html
+++ b/servicios/templates/empleados/listado.html
@@ -19,7 +19,7 @@
               <th class="izquierda">Apellido</th>
               <th class="izquierda">N° Legajo</th>
               <th class="centrado">Estado</th>
-              <th class="izquierda" width="100px">Acciones</th>
+              <th class="izquierda" width="100px">Actualizar</th>
           </tr>
           {% for empleado in empleados %}
               <tr>
