--- a/servicios/templates/clientes/actualizar.html
+++ b/servicios/templates/clientes/actualizar.html
@@ -1,33 +1,36 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Actualizar cliente </title>
-  </head>
-  <body>
-    <div class="container">
-      <h1 class="text-center fw-bold mb-3">Actualizar Cliente</h1>
-      <div class="d-flex justify-content-center">
+{% extends "index.html" %}
 
-        <form method="post" action="{% url 'actualizar_cliente' cliente.id %}">
-          {% csrf_token %}
-          <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre:</label>
-            <input type="text" class="form-control border border-dark border border-1" name="nombre" value="{{ cliente.nombre }}">
-          </div>
-          <div class="mb-3">
-            <label for="apellido" class="form-label">Apellido:</label>
-            <input type="text" class="form-control border border-dark border border-1" name="apellido" value="{{ cliente.apellido }}">
-          </div>          
-          <button type="submit" class="btn btn-primary">Actualizar</button>
-        </form>
+{% block titulo %} Actualizar Cliente {% endblock %}
+
+
+
+{% block contenido_principal %}
+{%if creado%}
+    <div class="toast-exito">Actualizado con exito</div>
+{%endif%}
+{%if fallo%}
+    <div class="toast-fallo">Ocurrió un error al tratar de actualizar el registro</div>
+{%endif%}
+<div class="contenido">
+  <h1 class="titulo">Actualizar Cliente</h1>
+  <form method="post" class="formulario">
+    {% csrf_token %}
+    <div class="contenedor-campos">
+      <div class="campo-formulario">
+        <label for="nombre">Nombre:</label>
+        <input type="text" name="nombre" value="{{cliente.nombre}}" required>
       </div>
-    </div>
-    <div class="d-flex justify-content-center pt-5">
-      <a class="btn btn-success bg-gradient fw-bold" href="{% url 'listar_clientes' %}">Lista de clientes</a>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
+      <div class="campo-formulario">
+        <label for="apellido">Apellido:</label>
+        <input type="text" name="apellido" value="{{cliente.apellido}}" required>
+      </div>
 
-  </body>
-</html>
+      <input class="boton" type="submit" value="Actualizar">
+
+      <a href="{% url 'listar_clientes' %}" class="volver-link">
+          Volver al listado
+      </a>
+    </div>
+  </form>
+</div>
+{% endblock %}
