--- a/servicios/templates/clientes/listado.html
+++ b/servicios/templates/clientes/listado.html
@@ -1,38 +1,53 @@
 {% extends "index.html" %}
 
-{% block titulo %} Registrar Reserva {% endblock %}
+{% block titulo %} Lista Clientes {% endblock %}
+
+
 
 {% block contenido_principal %}
-      <table>
+<div class="contenido">
+  <h1 class="titulo">Clientes</h1>
+    <div class="opciones-lista">
+      <div class="busqueda"></div>
+      <a class="boton" href="{% url 'registrar_cliente' %}">Añadir</a>
+    </div>
+    <div class="caja margen-abajo">
+      <table class="tabla">
           <tr>
-              <th>ID</th>
-              <th>Nombre</th>
-              <th>Apellido</th>  
-              <th>Acciones</th>            
+              <th>Id</th>
+              <th class="izquierda">Nombre</th>
+              <th class="izquierda">Apellido</th>
+              <th class="centrado">Estado</th>
+              <th class="izquierda" width="100px">Actualizar</th>
           </tr>
           {% for cliente in clientes %}
               <tr>
-                  <td>{{ cliente.id }}</td>
-                  <td>{{ cliente.nombre }}</td>
+                  <td class="centrado" width="50px">{{ cliente.id }}</td>
+                  <td class="izquierda">{{ cliente.nombre }}</td>
                   <td>{{ cliente.apellido }}</td>
-                  <td>
-                    <a href="{% url 'actualizar_cliente' cliente.id%}">
-                      Modificar
-                    </a>
-                    <a href="{%url 'eliminar_cliente' cliente.id %}"> <!-- La url para eliminar clientes no existe -->
-                      Eliminar
-                    </a>
+                  <td class="tabla-estado centrado">
                     {% if cliente.activo %}
-                      <a href="{% url 'desactivar_cliente' cliente.id%}">
-                        Desactivar
-                      </a>
+                        <a href="{% url 'desactivar_empleado' cliente.id%}" class="activo">
+                          Activo
+                        </a>
                     {% else %}  
-                      <a href="{% url 'activar_cliente' cliente.id%}">
-                        Activar
+                      <a href="{% url 'activar_cliente' cliente.id%}" class="inactivo">
+                        Inactivo
                       </a>
                     {% endif %}
+                  </td>
+                  <td class="tabla-acciones">
+                      <a href="{% url 'actualizar_cliente' cliente.id %}">
+                          <span>
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M12.7512 0.678513L11.0496 2.38007L15.6199 6.95039L17.3215 5.24883C18.2004 4.36992 18.2004 2.94609 17.3215 2.06718L15.9363 0.678513C15.0574 -0.200394 13.6336 -0.200394 12.7547 0.678513H12.7512ZM10.2551 3.17461L2.06016 11.373C1.69453 11.7387 1.42734 12.1922 1.27969 12.6879L0.0351567 16.9172C-0.0527339 17.216 0.0281255 17.5359 0.246094 17.7539C0.464063 17.9719 0.783985 18.0527 1.0793 17.9684L5.30859 16.7238C5.8043 16.5762 6.25781 16.309 6.62344 15.9434L14.8254 7.74492L10.2551 3.17461Z" fill="#353535"/>
+                              </svg>                              
+                          </span>
+                      </a>
                   </td>
               </tr>
           {% endfor %}
       </table>
-{%endblock%}
+    </div>
+</div>
+{% endblock %}
