--- a/servicios/templates/clientes/registrar.html
+++ b/servicios/templates/clientes/registrar.html
@@ -1,32 +1,36 @@
 {% extends "index.html" %}
 
-
 {% block titulo %} Nuevo Cliente {% endblock %}
 
 {% block contenido_principal %}
-  <h3 class="pb-3 d-flex justify-content-center fw-bold text-body-tertiary">Nuevo Cliente</h3>
-      
-        <div class="d-flex justify-content-center p-5 bg-warning bg-opacity-75 rounded-5">
+{%if creado%}
+    <div class="toast-exito">Creado con exito</div>
+{%endif%}
+{%if fallo%}
+    <div class="toast-fallo">Ocurrió un error al crear el registro</div>
+{%endif%}
+<div class="contenido">
+    <h1 class="titulo">Registrar Cliente</h1>
+    <form method="post" class="formulario">
+        {% csrf_token %}
+        <div class="contenedor-campos">
+            <div class="campo-formulario">
+                <label for="nombre">Nombre:</label>
+                <input type="text" name="nombre" id="nombre" placeholder="Ingrese nombre" required>
+            </div>
+            <div class="campo-formulario">
+                <label>Apellido:</label>
+                <input type="text" name="apellido" placeholder="Ingrese apellido">
+            </div>
+            
+            <input class="boton" type="submit" value="Guardar registro">
 
-            <form method="post"><!-- El metodo post envia informacion a travez de un formulario -->
-                {% csrf_token %} <!-- Token que genera Django -->
-
-                <div class="form-group">
-                  <label for="nombre" class="fw-semibold">Nombre:</label>
-                  <input type="text" name="nombre" maxlength="20" class="mb-3 form-control">
-
-                  <label for="apellido" class="fw-semibold">Apellido:</label>
-                  <input type="text" name="apellido" class="mb-3 form-control">
-
-                  <div class="d-flex justify-content-center pt-5">
-                    <input type="submit" class="btn btn-primary bg-gradient fw-bold" value="Agregar cliente">
-                  </div>
-                </div>
-
-              </form>
+            <a href="{% url 'listar_clientes' %}" class="volver-link">
+                Volver al listado
+            </a>
         </div>
+    </form>
 
-        <div class="d-flex justify-content-center pt-5">
-          <a class="btn btn-success bg-gradient fw-bold" href="{% url 'listar_clientes' %}">Lista de clientes</a>
-        </div>
+</div>
+
 {% endblock %}
