--- a/servicios/templates/coordinadores/listado.html
+++ b/servicios/templates/coordinadores/listado.html
@@ -3,59 +3,53 @@
 {% block titulo %} Lista Coordinadores {% endblock %}
 
 {% block contenido_principal %}
-<h3 class="pb-3 d-flex justify-content-center fw-bold text-body-tertiary">Lista de coordinadores</h3>
-    
-    <div class="p-5">        
-
-        <table class="table table-striped">
-            <thead class="table-dark">
-                <tr>
-                    <th scope="col">Id</th>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Apellido</th>
-                    <th scope="col">DNI</th>
-                    <th scope="col">Fecha de alta</th>
-                    <th scope="col">Estado</th>
-                    <th scope="col">Actualizar</th>
-                    <th scope="col">Eliminar</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for coordinador in coordinadores %}
-                    <tr>
-                        <th scope="col">{{coordinador.id}}</th>
-                        <td>{{coordinador.nombre}}</td>
-                        <td>{{coordinador.apellido}}</td>
-                        <td>{{coordinador.numero_documento}}</td>
-                        <td>{{coordinador.fecha_alta}}</td>
-                        <td>
-                            {% if coordinador.activo %}
-                                <a href="{% url 'desactivar_coordinador' coordinador.id %}" class="btn btn-danger bg-gradient fw-bold">Desctivar</a>
-                            {% else %}
-                                <a href="{% url 'activar_coordinador' coordinador.id %}" class="btn btn-primary bg-gradient fw-bold">Activar</a>
-                            {% endif %}
-                        </td>
-                        <td>
-                            {% if coordinador.activo %}
-                                <a href="{% url 'actualizar_coordinador' coordinador.id %}" class="btn btn-warning bg-gradient fw-bold text-white">Actualizar</a>
-                            {% else %}
-                                -------------
-                            {% endif %}
-                        </td>
-                        <!-- Eliminar registro -->
-                        <td>
-                            <form action="{% url 'eliminar_coordinador' coordinador.id %}" method="POST">
-                                {% csrf_token %}
-                                <button class="btn btn-danger bg-gradient fw-bold">Eliminar</button>
-                            </form>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-
-        <div class="d-flex justify-content-center p-5">
-            <a href="{% url 'registrar_coordinador' %}" class="btn btn-success bg-gradient fw-bold">Agregar coordinador</a>
-        </div>
+<div class="contenido">
+    <h1 class="titulo">Coordinadores</h1>
+    <div class="opciones-lista">
+      <div class="busqueda"></div>
+      <a class="boton" href="{% url 'registrar_coordinador' %}">Añadir</a>
     </div>
+    <div class="caja margen-abajo">
+        <table class="tabla">
+            <tr>
+                <th>Id</th>
+                <th class="izquierda">Nombre</th>
+                <th class="izquierda">Apellido</th>
+                <th class="izquierda">DNI</th>
+                <th class="centrado">Fecha de alta</th>
+                <th class="centrado">Estado</th>
+                <th class="izquierda" width="100px">Actualizar</th>
+            </tr>
+            {% for coordinador in coordinadores %}
+                <tr>
+                    <td class="centrado" width="50px">{{coordinador.id}}</td>
+                    <td class="izquierda">{{coordinador.nombre}}</td>
+                    <td class="izquierda">{{coordinador.apellido}}</td>
+                    <td class="izquierda">{{coordinador.numero_documento}}</td>
+                    <td class="centrado">{{coordinador.fecha_alta}}</td>
+                    <td class="tabla-estado centrado">
+                        {% if coordinador.activo %}
+                            <a href="{% url 'desactivar_coordinador' coordinador.id%}" class="activo">
+                            Activo
+                            </a>
+                        {% else %}
+                            <a href="{% url 'activar_coordinador' coordinador.id%}" class="inactivo">
+                            Inactivo
+                            </a>
+                        {% endif %}
+                    </td>
+                    <td class="tabla-acciones">
+                      <a href="{% url 'actualizar_coordinador' coordinador.id %}">
+                          <span>
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M12.7512 0.678513L11.0496 2.38007L15.6199 6.95039L17.3215 5.24883C18.2004 4.36992 18.2004 2.94609 17.3215 2.06718L15.9363 0.678513C15.0574 -0.200394 13.6336 -0.200394 12.7547 0.678513H12.7512ZM10.2551 3.17461L2.06016 11.373C1.69453 11.7387 1.42734 12.1922 1.27969 12.6879L0.0351567 16.9172C-0.0527339 17.216 0.0281255 17.5359 0.246094 17.7539C0.464063 17.9719 0.783985 18.0527 1.0793 17.9684L5.30859 16.7238C5.8043 16.5762 6.25781 16.309 6.62344 15.9434L14.8254 7.74492L10.2551 3.17461Z" fill="#353535"/>
+                              </svg>                              
+                          </span>
+                      </a>
+                  </td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
+</div>
 {% endblock %}
