--- a/servicios/templates/reservas/listado.html
+++ b/servicios/templates/reservas/listado.html
@@ -1,38 +1,47 @@
 {% extends "index.html" %}
 
-{% block titulo %} Registrar Reserva {% endblock %}
+{% block titulo %} Lista Reservas {% endblock %}
+
+
 
 {% block contenido_principal %}
-  <h1>Listado de reservas</h1>
-  <a href="{% url 'registrar_reserva' %}">Nueva reserva</a>
-  <table>
-    <thead>
-      <tr>
-        <th>ID</th>
-        <th>Servicio</th>
-        <th>Cliente</th>
-        <th>Precio</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for reserva in reservas %}
-        <tr>
-          <td>{{ reserva.id }}</td>
-          <td>{{ reserva.servicio.nombre }}</td>
-          <td>{{ reserva.cliente.nombre }}</td>
-          <td>{{ reserva.precio }}</td>
-          <td>
-            <a href="{% url 'registrar_reserva' %}">Nueva</a>
-            <a href="{% url 'actualizar_reserva' reserva.id %}">Modificar</a>
-            <a href="{% url 'eliminar_reserva' reserva.id %}">Eliminar</a>
-          </td>
-        </tr>
-      {% empty %}
-        <tr>
-          <td colspan="6">No hay reservas disponibles.</td>
-        </tr>
-      {% endfor %}
-    </tbody>
-  </table>
+<div class="contenido">
+  <h1 class="titulo">Reservas</h1>
+    <div class="opciones-lista">
+      <div class="busqueda"></div>
+      <a class="boton" href="{% url 'registrar_reserva' %}">Añadir</a>
+    </div>
+    <div class="caja margen-abajo">
+      <table class="tabla">
+          <tr>
+              <th>Id</th>
+              <th class="izquierda">Servicio</th>
+              <th class="izquierda">Cliente</th>
+              <th class="izquierda">Precio</th>
+              <th class="centrado">Eliminar</th>
+              <th class="izquierda" width="100px">Actualizar</th>
+          </tr>
+          {% for reserva in reservas %}
+              <tr>
+                  <td class="centrado" width="50px">{{ reserva.id }}</td>
+                  <td class="izquierda">{{ reserva.servicio.nombre }}</td>
+                  <td>{{ reserva.cliente.nombre }}</td>
+                  <td>{{ reserva.precio }}</td>
+                  <td class="centrado tabla-estado">
+                    <a href="{% url 'eliminar_reserva' reserva.id %}" class="inactivo">Eliminar</a>
+                  </td>
+                  <td class="tabla-acciones">
+                      <a href="{% url 'actualizar_reserva' reserva.id %}">
+                          <span>
+                            <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M12.7512 0.678513L11.0496 2.38007L15.6199 6.95039L17.3215 5.24883C18.2004 4.36992 18.2004 2.94609 17.3215 2.06718L15.9363 0.678513C15.0574 -0.200394 13.6336 -0.200394 12.7547 0.678513H12.7512ZM10.2551 3.17461L2.06016 11.373C1.69453 11.7387 1.42734 12.1922 1.27969 12.6879L0.0351567 16.9172C-0.0527339 17.216 0.0281255 17.5359 0.246094 17.7539C0.464063 17.9719 0.783985 18.0527 1.0793 17.9684L5.30859 16.7238C5.8043 16.5762 6.25781 16.309 6.62344 15.9434L14.8254 7.74492L10.2551 3.17461Z" fill="#353535"/>
+                              </svg>                              
+                          </span>
+                      </a>
+                  </td>
+              </tr>
+          {% endfor %}
+      </table>
+    </div>
+</div>
 {% endblock %}
