--- a/servicios/templates/clientes/actualizar.html
+++ b/servicios/templates/clientes/actualizar.html
@@ -1,33 +1,30 @@
-<!DOCTYPE html>
-<html lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Actualizar cliente </title>
-  </head>
-  <body>
-    <div class="container">
-      <h1 class="text-center fw-bold mb-3">Actualizar Cliente</h1>
-      <div class="d-flex justify-content-center">
+{% extends "index.html" %}
 
-        <form method="post" action="{% url 'actualizar_cliente' cliente.id %}">
-          {% csrf_token %}
-          <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre:</label>
-            <input type="text" class="form-control border border-dark border border-1" name="nombre" value="{{ cliente.nombre }}">
-          </div>
-          <div class="mb-3">
-            <label for="apellido" class="form-label">Apellido:</label>
-            <input type="text" class="form-control border border-dark border border-1" name="apellido" value="{{ cliente.apellido }}">
-          </div>          
-          <button type="submit" class="btn btn-primary">Actualizar</button>
-        </form>
-      </div>
-    </div>
-    <div class="d-flex justify-content-center pt-5">
-      <a class="btn btn-success bg-gradient fw-bold" href="{% url 'listar_clientes' %}">Lista de clientes</a>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js"></script>
+{% block titulo %} Actualizar Cliente {% endblock %}
 
-  </body>
-</html>
+{% block contenido_principal %}
+<div class="contenido">
+  <h1 class="titulo">Actualizar Cliente</h1>
+</div>
+      <div class="d-flex justify-content-center p-5 bg-warning bg-opacity-75 rounded-5">
+        <form method="post" class="formulario">
+            {% csrf_token %}
+
+            <div class="contenedor-campos">
+              <div class="campo-formulario">
+              <label class="fw-semibold">Nombre:</label>
+              <input type="text" name="nombre" maxlength="20" class="mb-3 form-control" value="{{cliente.nombre}}">
+              </div>
+              <div class="campo-formulario">
+              <label class="fw-semibold">Apellido:</label>
+              <input type="text" name="apellido" maxlength="20" class="mb-3 form-control" value="{{cliente.apellido}}">
+              </div>              
+              <input type="submit" class="boton" value="Actualizar">
+              <a href="{% url 'listar_clientes' %}" class="volver-link">
+                Volver al listado
+              </a>
+            </div>
+
+          </form>
+    </div>
+{% endblock %}
