--- a/servicios/templates/servicios/listado.html
+++ b/servicios/templates/servicios/listado.html
@@ -4,55 +4,58 @@
 
 
 {% block contenido_principal %}
-  <h1>Listado de servicios</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>Id</th>
-        <th>Nombre</th>
-        <th>Descripción</th>
-        <th>Precio</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for servicio in servicios %}
+<div class="contenido">
+  <h1 class="titulo">Listado de servicios</h1>
+  <div class="opciones-lista">
+    <div class="busqueda"></div>
+    <a class="boton" href="{% url 'registrar_servicio' %}">Añadir</a>
+  </div>
+  <div class="caja margen-abajo">
+    <table class="tabla">
         <tr>
-          <td>{{ servicio.id }}</td>
-          <td>{{ servicio.nombre }}</td>
+          <th class="centrado">Id</th>
+          <th class="izquierda">Nombre</th>
+          <th class="izquierda">Descripción</th>
+          <th class="izquierda">Precio</th>
+          <th class="centrado">Estado</th>
+          <th class="izquierda"  width="100px">Acciones</th>
+        </tr>
+        {% for servicio in servicios %}
+        <tr>
+          <td class="centrado" width="50px">{{ servicio.id }}</td>
+          <td class="izquierda">{{ servicio.nombre }}</td>
           <td>{{ servicio.descripcion }}</td>
           <td>{{ servicio.precio }}</td>
-          <td>
-            <a href="{% url 'actualizar_servicio' servicio.id %}">
-                Modificar
-            </a>
 
-            |
-            <!--Agregar view eliminar
-            <a href="#">
-                Eliminar
-            </a>
-            |
-            -->
-   
-
+          <td class="tabla-estado centrado">
             {% if servicio.activo %}
-              <a href="{% url 'desactivar_servicio' servicio.id%}">
-                Desactivar
-              </a>
+                <a href="{% url 'desactivar_servicio' servicio.id%}" class="activo">
+                  Activo
+                </a>
             {% else %}  
-              <a href="{% url 'activar_servicio' servicio.id%}">
-                Activar
+              <a href="{% url 'activar_servicio' servicio.id%}" class="inactivo">
+                Inactivo
               </a>
             {% endif %}
+          </td>
+
+          <td class="tabla-acciones">
+            <a href="{% url 'actualizar_servicio' servicio.id %}">
+                <span>
+                  <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M12.7512 0.678513L11.0496 2.38007L15.6199 6.95039L17.3215 5.24883C18.2004 4.36992 18.2004 2.94609 17.3215 2.06718L15.9363 0.678513C15.0574 -0.200394 13.6336 -0.200394 12.7547 0.678513H12.7512ZM10.2551 3.17461L2.06016 11.373C1.69453 11.7387 1.42734 12.1922 1.27969 12.6879L0.0351567 16.9172C-0.0527339 17.216 0.0281255 17.5359 0.246094 17.7539C0.464063 17.9719 0.783985 18.0527 1.0793 17.9684L5.30859 16.7238C5.8043 16.5762 6.25781 16.309 6.62344 15.9434L14.8254 7.74492L10.2551 3.17461Z" fill="#353535"/>
+                    </svg>                              
+                </span>
+            </a>
         </td>
+
         </tr>
-      {% empty %}
+        {% empty %}
         <tr>
-          <td colspan="3">No hay servicios disponibles.</td>
+          <td colspan="5">No hay servicios disponibles.</td>
         </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-  <a href="{% url 'registrar_servicio' %}">Nuevo Servicio</a>
+        {% endfor %}
+    </table>
+  </div>
+</div>
 {% endblock %}
