--- a/servicios/templates/servicios/actualizar.html
+++ b/servicios/templates/servicios/actualizar.html
@@ -25,7 +25,7 @@
         <input type="text" name="descripcion" value="{{servicio.descripcion}}" required>
       </div>
       <div class="campo-formulario">
-        <label for="precio">N° Legajo:</label>
+        <label for="precio">Precio:</label>
         <input type="number" name="precio" value="{{servicio.precio}}" required>
       </div>
 
