Cambiado nombre de la app a reserva easy

--- a/servicios/templates/index.html
+++ b/servicios/templates/index.html
@@ -25,7 +25,7 @@
     </header>
     <nav class="sidebar" id="sidebar">
       <div class="logo font-fuerte font-blanco">
-        Logo <span class="font-suave font-blanco">Admin</span>
+        Reserva <span class="font-suave font-blanco">Easy</span>
       </div>
       <ul>
         <a id="dashboard" class="link font-medio" href="{%url 'index'%}">
